force-app/main/default/objects/Support_Ticket__c/fields/Account_owner__c.field-meta.xml
<CustomField>
    <fullName>Account_owner__c</fullName>
    <formula>Account_url__r.Owner.FirstName +&apos; &apos;+ Account_url__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account owner</label>
    <type>Text</type>
</CustomField>