force-app/main/default/objects/Support_Ticket__c/fields/Account_url__c.field-meta.xml
<CustomField>
    <fullName>Account_url__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>If there are more than one account to change ownership, you can attach excel or word file at the bottom of this form.</inlineHelpText>
    <label>Account name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Tickets (Account url)</relationshipLabel>
    <relationshipName>Support_Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>