force-app/main/default/objects/Support_Ticket__c/fields/Affected_functionality__c.field-meta.xml
<CustomField>
    <fullName>Affected_functionality__c</fullName>
    <label>Affected functionality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Preferred Vendor RPFs</fullName>
            </value>
            <value>
                <fullName>Sample Request</fullName>
            </value>
            <value>
                <fullName>Home Page</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Credit App</fullName>
            </value>
            <value>
                <fullName>Support Tickets</fullName>
            </value>
            <value>
                <fullName>Report &amp; Dashboard</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
                <isActive>false</isActive>
                <label>Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>