force-app/main/default/objects/Support_Ticket__c/fields/Assigned_To_date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_date__c</fullName>
    <label>Assigned To date</label>
    <type>DateTime</type>
</CustomField>