force-app/main/default/objects/Support_Ticket__c/fields/Changes_Details__c.field-meta.xml
<CustomField>
    <fullName>Changes_Details__c</fullName>
    <label>Changes Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>