force-app/main/default/objects/Support_Ticket__c/fields/Component_To_be_Depoyed__c.field-meta.xml
<CustomField>
    <fullName>Component_To_be_Depoyed__c</fullName>
    <label>Component To be Deployed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>