force-app/main/default/objects/Support_Ticket__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Support Tickets</relationshipLabel>
    <relationshipName>Support_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>