force-app/main/default/objects/Support_Ticket__c/fields/CR_Status__c.field-meta.xml
<CustomField>
    <fullName>CR_Status__c</fullName>
    <label>CR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>On Hold by LT</fullName>
            </value>
            <value>
                <fullName>Inprogress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Ready for UAT</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Approved for deploy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>