force-app/main/default/objects/Support_Ticket__c/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>