force-app/main/default/objects/Support_Ticket__c/fields/Issue_type__c.field-meta.xml
<CustomField>
    <fullName>Issue_type__c</fullName>
    <label>Issue type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add vendors &amp; series</fullName>
            </value>
            <value>
                <fullName>Discontinue vendors &amp; series</fullName>
            </value>
            <value>
                <fullName>Remove duplicate opportunity</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>User Account Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Account Owner Change</fullName>
            </value>
            <value>
                <fullName>Change Request Enhancement</fullName>
                <label>Change Request / Enhancement</label>
            </value>
            <value>
                <fullName>Opportunity Owner Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>