force-app/main/default/objects/Support_Ticket__c/fields/kerridge_Account_number__c.field-meta.xml
<CustomField>
    <fullName>kerridge_Account_number__c</fullName>
    <formula>Account_url__r.Kerridge_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>kerridge Account number</label>
    <type>Text</type>
</CustomField>