force-app/main/default/objects/Support_Ticket__c/fields/Reporting_manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Tickets5</relationshipName>
    <type>Lookup</type>
</CustomField>