force-app/main/default/objects/Support_Ticket__c/fields/Request_by__c.field-meta.xml
<CustomField>
    <fullName>Request_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Tickets3</relationshipName>
    <type>Lookup</type>
</CustomField>