force-app/main/default/objects/Support_Ticket__c/fields/Resulation_Provided__c.field-meta.xml
<CustomField>
    <fullName>Resulation_Provided__c</fullName>
    <label>Resolution Provided</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>