force-app/main/default/objects/Support_Ticket__c/fields/Series_name__c.field-meta.xml
<CustomField>
    <fullName>Series_name__c</fullName>
    <label>Series name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>