force-app/main/default/objects/Support_Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Waiting for user input</fullName>
            </value>
            <value>
                <fullName>Ready For Testing</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Moved to UAT</fullName>
            </value>
            <value>
                <fullName>Deployed to Production</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved for deploy</fullName>
                <isActive>false</isActive>
                <label>Approved for deploy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>