force-app/main/default/objects/Support_Ticket__c/fields/Time_Spent_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_In_Hours__c</fullName>
    <label>Time Spent In Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>