force-app/main/default/objects/Support_Ticket__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create New User</fullName>
            </value>
            <value>
                <fullName>Update User Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>