force-app/main/default/objects/Support_Ticket__c/fields/User_Branch__c.field-meta.xml
<CustomField>
    <fullName>User_Branch__c</fullName>
    <label>User Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>