force-app/main/default/objects/Support_Ticket__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>User Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>