force-app/main/default/objects/Support_Ticket__c/fields/Vendor_name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_name__c</fullName>
    <label>Vendor name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>