force-app/main/default/objects/Support_Ticket__c/recordTypes/Account_Owner_Change.recordType-meta.xml
<RecordType>
    <fullName>Account_Owner_Change</fullName>
    <active>true</active>
    <label>Account Owner Change</label>
</RecordType>