force-app/main/default/objects/Support_Ticket__c/recordTypes/Add_vendor_and_Series.recordType-meta.xml
<RecordType>
    <fullName>Add_vendor_and_Series</fullName>
    <active>true</active>
    <label>Add vendor and Series</label>
</RecordType>