force-app/main/default/objects/Support_Ticket__c/recordTypes/Change_Request_Enhancement.recordType-meta.xml
<RecordType>
    <fullName>Change_Request_Enhancement</fullName>
    <active>true</active>
    <label>Change Request / Enhancement</label>
</RecordType>