force-app/main/default/objects/Support_Ticket__c/recordTypes/Data_Load.recordType-meta.xml
<RecordType>
    <fullName>Data_Load</fullName>
    <active>true</active>
    <label>Data Load</label>
</RecordType>