force-app/main/default/objects/Support_Ticket__c/recordTypes/Opportunity_Owner_Change.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Owner_Change</fullName>
    <active>false</active>
    <label>Opportunity Owner Change</label>
</RecordType>