force-app/main/default/objects/Support_Ticket__c/recordTypes/Remove_duplicate.recordType-meta.xml
<RecordType>
    <fullName>Remove_duplicate</fullName>
    <active>true</active>
    <label>Remove duplicate</label>
</RecordType>