force-app/main/default/objects/Support_Ticket__c/recordTypes/User_Account_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>User_Account_Maintenance</fullName>
    <active>true</active>
    <label>User Account Maintenance</label>
</RecordType>