force-app/main/default/objects/Support_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Issue_Title__c</columns>
    <columns>Issue_type__c</columns>
    <columns>Status__c</columns>
    <columns>CR_Status__c</columns>
    <columns>Remark__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>