force-app/main/default/objects/Support_Ticket__c/listViews/In_Process.listView-meta.xml
<ListView>
    <fullName>In_Process</fullName>
    <columns>NAME</columns>
    <columns>Issue_Title__c</columns>
    <columns>Issue_type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved,Deployed to Production,Closed</value>
    </filters>
    <label>In Process</label>
</ListView>