force-app/main/default/objects/Support_Ticket__c/listViews/Waiting_for_input.listView-meta.xml
<ListView>
    <fullName>Waiting_for_input</fullName>
    <columns>NAME</columns>
    <columns>Issue_Title__c</columns>
    <columns>Issue_type__c</columns>
    <columns>Status__c</columns>
    <columns>CR_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Waiting for user input</value>
    </filters>
    <label>Waiting for input</label>
</ListView>